Some bug fixes + add possibility to select geckolib models for entities